<resources>
    <string name="app_name">Shout!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_shouts">You haven\'t received any Shouts yet!</string>
    <string name="shout">Shout!</string>
    <string name="messageHint"> Type to Shout...</string>
    <string name="action_clear_messages">Clear Messages</string>
    <string name="action_sort_messages">Sort By</string>
    <string name="menu_sort_received_time">Sort by received time</string>
    <string name="menu_sort_sent_time">Sort by sent time</string>
</resources>
