<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="in.kubryant.shout.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear_messages" android:title="@string/action_clear_messages" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort_messages"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_sort_received_time"
                android:title="@string/menu_sort_received_time"/>
            <item
                android:id="@+id/menu_sort_sent_time"
                android:title="@string/menu_sort_sent_time"/>
        </menu>
    </item>
</menu>
